--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@ body {
     display: block;
     background-color: #eeeeee;
     margin:40px auto;
-    max-width: 650px;
+    max-width: 500px;
     line-height: 1.4;
     font-size: 18px;
     color: #444;
     padding: 0 10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
 }
